--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.2",
+    "vscode-icons-js": "^11.6.1",
     "web-vitals": "^3.0.1"
   },
   "scripts": {
